Correct color text of active and uncactive button + correct vertical align

--- a/wp-content/themes/Horizon/pagebox/modules/side_tables/scss/module.scss
+++ b/wp-content/themes/Horizon/pagebox/modules/side_tables/scss/module.scss
@@ -24,14 +24,14 @@ $border-bottom: 2px solid #c2c2c2;
           h2 {
             cursor: pointer;
             font-size: 1rem;
-            font-weight: bold;
+            font-weight: normal;
             font-family: "Arial";
-            padding: 12px 5px;
+            padding: 16px 5px 8px;
             text-align: center;
             text-transform: capitalize;
             min-height: 41px;
             line-height: 1.938;
-            color: rgb(48, 62, 72);
+            color: #896808;
             @include user-select(none);
             min-height: 55px;
 
@@ -39,6 +39,13 @@ $border-bottom: 2px solid #c2c2c2;
 
           &.active {
             background-color: #ffc425;
+
+            h2 {
+              font-weight: bold;
+              color: rgb(48, 62, 72);
+              padding: 12px 5px;
+
+            }
 
             &:before {
               content: '';
